cmd/notif-gateway/k8s/02-notif-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notif-gateway
  namespace: kube-system
  annotations:
    "sidecar.jaegertracing.io/inject": "true"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notif-gateway
  template:
    metadata:
      labels:
        app: notif-gateway
    spec:
      containers:
        - name: notif-gateway
          image: uhub.service.ucloud.cn/entropypool/notif-gateway:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: service-config
              mountPath: /etc/NotifGateway
      volumes:
        - name: service-config
          configMap:
            name: notif-gateway-config
            items:
              - key: service-conf
                path: NotifGateway.viper.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: notif-gateway
  namespace: kube-system
spec:
  ports:
    - name: http
      port: 50700
      targetPort: 50700
    - name: grpc
      port: 50701
      targetPort: 50701
    - name: healthz
      port: 50702
      targetPort: 50702
    - name: prometheus
      port: 50703
      targetPort: 50703
  selector:
    app: notif-gateway
